--- a/FoursquareChat.html
+++ b/FoursquareChat.html
@@ -2,10 +2,16 @@
 <title>Foursquare Chat!</title>
 </head>
 <body>
-{{> login}}
-{{> myrooms}}
-{{> entry}}
+	{{> content}}
 </body>
+<template name="content">
+{{#if logged}}
+	{{> myrooms}}
+	{{> entry}}
+{{else}}
+	{{> login}}
+{{/if}}
+</template>
 <template name="myrooms">
  Welcome to {{roomName}}
 {{#each messages}}
@@ -18,7 +24,7 @@
 <template name="entry">
   <p>
     <span>{{userName}}</span>
-    <input type="text" id="messageBox" name="message" placeholder="What do you want to say?">
+    <input type="text" id="messageBox" name="message" placeholder="Say something!">
   </p>
 </template> 
 
